--- a/gateway/src/main/docker/mariadb.yml
+++ b/gateway/src/main/docker/mariadb.yml
@@ -10,4 +10,4 @@ services:
             - MYSQL_DATABASE=gateway
         ports:
             - 3306:3306
-        command: mysqld --lower_case_table_names=1 --skip-ssl
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
