--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -21,6 +21,8 @@ services:
         command: >-
             mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
             --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        ports:
+            - 3309:3306
 
     gateway-app:
         image: quangtien/gateway
@@ -45,6 +47,8 @@ services:
         command: >-
             mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
             --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        ports:
+            - 3308:3306
 
     uaa-app:
         image: quangtien/uaa
@@ -66,6 +70,8 @@ services:
         command: >-
             mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
             --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        ports:
+            - 3307:3306
 
     zookeeper:
         extends:
