--- a/docker-compose/kafka.yml
+++ b/docker-compose/kafka.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
     zookeeper:
         image: wurstmeister/zookeeper:3.4.6
+        ports:
+            - 2181:2181
     kafka:
         image: wurstmeister/kafka:0.10.1.1
         environment:
@@ -9,5 +11,5 @@ services:
             KAFKA_ADVERTISED_PORT: 9092
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
             KAFKA_CREATE_TOPICS: "topic-jhipster:1:1"
-        #ports:
-        #    - 9092:9092  # Uncomment to make Kafka available externally
+        ports:
+            - 9092:9092  # Uncomment to make Kafka available externally
