--- a/gateway/.yo-rc.json
+++ b/gateway/.yo-rc.json
@@ -2,7 +2,8 @@
   "generator-jhipster": {
     "promptValues": {
       "packageName": "net.tinyset.gateway",
-      "nativeLanguage": "en"
+      "nativeLanguage": "en",
+      "microservicePath": "../authorization-service"
     },
     "jhipsterVersion": "4.3.0",
     "baseName": "gateway",
