--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -21,9 +21,7 @@ services:
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
             - MYSQL_DATABASE=authorization
-        command: >-
-            mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
-            --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
         ports:
             - 3309:3306
 
@@ -49,9 +47,7 @@ services:
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
             - MYSQL_DATABASE=gateway
-        command: >-
-            mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
-            --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
         ports:
             - 3308:3306
 
@@ -76,9 +72,7 @@ services:
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
             - MYSQL_DATABASE=uaa
-        command: >-
-            mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
-            --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
         ports:
             - 3307:3306
 
