--- a/authorization-service/.yo-rc.json
+++ b/authorization-service/.yo-rc.json
@@ -43,5 +43,8 @@
       "vi"
     ],
     "clientPackageManager": "yarn"
+  },
+  "generator-jhipster-entity-audit": {
+    "auditFramework": "custom"
   }
 }
