--- a/ansible/start-log.yml
+++ b/ansible/start-log.yml
@@ -4,9 +4,7 @@
   become: true
   tasks:
     - name: start docker service
-      shell: docker-compose up -d {{ item }}
-      args:
-        chdir: /var/docker/docker-compose/
+      shell: docker-compose up -d {{ item }} chdir={{ docker_folder }}
       with_items:
         - "jhipster-elasticsearch"
         - "jhipster-logstash"
