--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -25,6 +25,27 @@ services:
         ports:
             - 3309:3306
 
+    customer-app:
+        image: customer
+        environment:
+            - SPRING_PROFILES_ACTIVE=prod,swagger
+            - EUREKA_CLIENT_SERVICE-URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
+            - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
+            - SPRING_DATASOURCE_URL=jdbc:mariadb://customer-mariadb:3306/customer
+            - JHIPSTER_SLEEP=10
+            - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka
+            - SPRING_CLOUD_STREAM_KAFKA_BINDER_ZK_NODES=zookeeper
+            - JHIPSTER_REGISTRY_PASSWORD=admin
+    customer-mariadb:
+        image: mariadb:10.1.17
+        environment:
+            - MYSQL_USER=root
+            - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+            - MYSQL_DATABASE=customer
+        ports:
+            - 3310:3306
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-time-zone="+07:00" --lower_case_table_names=1 --skip-ssl
+
     gateway-app:
         image: quangtien/gateway
         environment:
