--- a/ansible/start-db.yml
+++ b/ansible/start-db.yml
@@ -8,4 +8,5 @@
       with_items:
         - "uaa-mariadb"
         - "authorization-mariadb"
+        - "customer-mariadb"
         - "gateway-mariadb"
